# train_saec

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sample_code.py  utils.py
.github/workflows/: build_and_test_pack_ubuntu.yml  build_and_test_pack_windows.yml  build_and_test_package.yml  build_test_release.yml  deps_and_tests  deps_and_tests.yml
config/: config.yaml
data_gen_presets/: baseline.json  daugm_denoise.json  daugm_only.json  denoise_only.json
dev/data/test/: download_mini.json  downloaded_data_meta.pkl
dev/data/test/images/: _feature_extraction_parameters.json
dev/data/train/: download_ne_europe.json  downloaded_data_meta.pkl
dev/outp/hot_models/: 20250630_111545_session_info_GenBTP16_CH0256_epo001.pkl  20250630_111551_session_info_GenBTP16_CH0256_epo002.pkl  20250630_111557_session_info_GenBTP16_CH0256_epo003.pkl  20250630_111628_session_info_GenBTP16_CH0256_epo004.pkl  20250630_111633_session_info_GenBTP16_CH0256_epo005.pkl  20250630_111638_session_info_GenBTP16_CH0256_epo006.pkl  dirkeeper.txt
dev/scripts/: dev_main.py
session_params/training/: sess_00_baseline.json  sess_01_randinit.json  sess_02_resume.json
src/: test_01.py  train_saec.py
src/model_collection/: model_experiments.py
src/train_saec/: tools.py
src/train_saec/model_collection/: model_collection.py  model_experiments.py
temp/: build_test_release.yml  deps_and_tests.yml
test/: test_01.py
tests/: test_01.py
train_saec/: test_01.py  tools.py
